# safe-node

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  README.zh-CN.md
.github/workflows/: release.yml
config/: example.node.json
example/: README.md  create_task.py
scripts/: docker-build.sh  docker-run-executor.sh  docker-run-service.sh  install.sh  release.sh
src/: app.rs  cli.rs  config.rs  error.rs  gateway.rs  hyperliquid.rs  lib.rs  main.rs  observe.rs  policy.rs  retry.rs  signing.rs  state.rs
src/app/: executable.rs  mode.rs  pending.rs  runner.rs  shutdown.rs  signing_intent.rs  tests.rs
src/config/: address.rs  loader.rs  raw.rs  redacted.rs  types.rs
src/gateway/: client.rs  response.rs  types.rs
src/observe/: debug_http.rs  tui.rs
src/observe/debug_http/: handlers.rs  server.rs  snapshot.rs  types.rs  web.rs
src/observe/tui/: client.rs  render.rs  terminal.rs  types.rs
src/policy/: decision.rs  rule.rs
src/signing/: generate.rs  import.rs  keystore.rs  password.rs  private_key.rs  signer.rs
src/state/: clock.rs  sqlite.rs  store.rs  task_state.rs  types.rs
